trying a height approach increasing background by 60px + 100vh to fix background image jumping issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,6 +63,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  height: calc(100vh + 60px);
 }
 
 @keyframes gradient {
